[package]
name = "dca-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = { package = "ckb-rocksdb", version = "0.18", default-features = false, features = ["snappy", "march-native"] }
sparse-merkle-tree = { version = "0.6.1", features = ["trie"] }
merkle-mountain-range = { package = "ckb-merkle-mountain-range", git = "https://github.com/quake/merkle-mountain-range", branch = "quake/updatable" }
blake2b-rs = "0.2"
rand_chacha = "0.3"

[dev-dependencies]
tempfile = "3.0"
